{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player Movement",
            "id": "8c977bad-2638-40d2-b755-284a3475b652",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "60e0165b-59ac-4475-9568-5835db329c4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "924b8cc8-f196-4860-8345-a004336351c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Lock On Left",
                    "type": "Button",
                    "id": "bb85a64e-a1dc-4aaa-9cbe-b8ba9ad460a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lock On Right",
                    "type": "Button",
                    "id": "8bf309f4-7dc5-448d-9cf0-cb1af697b671",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4fcc3000-2ebf-478a-9e88-2712c297991d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ec79fbbf-d7a4-4e4f-bee4-84bdbe71a66a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2fef18d2-292f-4805-a06a-62d5464c6dd3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6be66697-1946-4ffa-9205-a15e37f6b994",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "03a33751-1937-4257-acd2-bd56aaec68e5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8d2cf706-b0d7-46d5-a916-5c66bab3a74c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "634fff51-8991-45ae-9789-5c71d7a18da8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lock On Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31d0180c-06aa-4833-8a56-73f5aa1fff6c",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lock On Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "1876ae7a-ff23-4378-bf31-82910797b3f2",
            "actions": [
                {
                    "name": "InventoryButton",
                    "type": "Button",
                    "id": "f0aa2890-428d-4189-9453-c431ead91141",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cretical Attack",
                    "type": "Button",
                    "id": "1576e884-1a73-4124-8a66-b426c22e66eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "97036d8e-1abc-4bbc-9f77-09c634b7df01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "456347f0-f2b5-4365-881f-4ac66834d19b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "A",
                    "type": "Button",
                    "id": "82e4b9d0-528c-4265-a702-4570fd19555c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "c88bbe8c-68a4-497b-918f-4c154d3f98fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "cfe15138-9cc6-4474-884f-939449673630",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "9f499122-26eb-496d-9029-a64ce30d7bb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapRB",
                    "type": "Button",
                    "id": "b2fdd783-d578-4be8-9480-3703f276454e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldRB",
                    "type": "Button",
                    "id": "adc9c37a-ca86-4047-bff2-e2cdae5a530c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapRT",
                    "type": "Button",
                    "id": "526e6f32-c3f4-4f3b-ac0f-a9516f6c92a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldRT",
                    "type": "Button",
                    "id": "fb225fae-2113-4230-9fcb-af2830724646",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapLB",
                    "type": "Button",
                    "id": "ec0aecf5-27ee-4671-af0d-2b643a147c05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldLB",
                    "type": "Button",
                    "id": "c3e4d336-ddec-479f-9235-a8d54ea9c54d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapLT",
                    "type": "Button",
                    "id": "3ccdb3b6-98d0-4527-ad9b-a98208233cb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldLT",
                    "type": "Button",
                    "id": "f07fc09c-8d05-4bf0-9165-ea2b239bb097",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a48223be-4623-47e4-ab1e-ce0f38ce8eaf",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbb3fcc3-b73e-4dc4-9bdc-6a762e99c96c",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4a1ee1e-c626-4018-94ad-fca8591feace",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00bbe160-6d87-4214-9634-17c00c43d06d",
                    "path": "<Keyboard>/e",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TapRB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "500cb330-4656-487e-9ba8-f1843e4e4206",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldRB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "434c88a7-31dc-40e5-9225-2056cff0f40d",
                    "path": "<Keyboard>/r",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TapRT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13849d15-f692-4906-8f0b-41367c27a9ec",
                    "path": "<Keyboard>/r",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldRT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb76c91b-eb3e-48d6-97d1-58117b76fb36",
                    "path": "<Keyboard>/z",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TapLT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57da4376-86fe-4698-a624-89367301894c",
                    "path": "<Keyboard>/q",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TapLB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bda5cee-f0ed-4507-899a-f705b7551b13",
                    "path": "<Keyboard>/q",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldLB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68f2e16b-1696-4a3d-9c96-919c77c38aa0",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ec14868-9ea3-4dd5-b280-a56fa2aab9b4",
                    "path": "<Keyboard>/z",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldLT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69a1279b-52ec-4efc-a37e-82e62b047808",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b89b8247-a829-4b9b-b3fd-521d1cfc5187",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91f7eaa4-923b-48b2-97a9-b1d373d9541d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e3fa825-167e-4a1d-a6d1-efc20cbd55c2",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Cretical Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Quick Slots",
            "id": "57f21145-3026-464f-8e9d-3bafca2b66cd",
            "actions": [
                {
                    "name": "D-Pad_Up",
                    "type": "Button",
                    "id": "ef55b5df-05fe-4007-8e97-215f10ddf475",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "D-Pad_Dowm",
                    "type": "Button",
                    "id": "73f71f77-6ad5-411b-89c8-6b325e7cf05e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "D-Pad_Right",
                    "type": "Button",
                    "id": "e10e000d-5c06-487a-a710-8916caf8eb41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "D-Pad_Left",
                    "type": "Button",
                    "id": "1ee3be95-93b4-450d-a86d-35b8aa906477",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "036b66a5-7125-4e10-8102-0011f5f66792",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-Pad_Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aa64873-ce8e-4257-8d32-8ca9c4fcd71f",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-Pad_Dowm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f70823e2-7570-4d8c-abc6-309102acad94",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-Pad_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "434a70b9-895a-4293-8840-9c28027128b0",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "D-Pad_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}